@@ -1,3 +1,12 @@
+2010-04-09  Thomas Heller  <theller@python.net>
+
+	* comtypes.client.dynamic: Added _FlagAsMethod(*names) method
+	to the _Dispatch class.
+
+	This allows to flag these attribute names as being methods.  Some
+	objects do not correctly differentiate methods and properties,
+	leading to problems when calling these methods.
+
 2010-01-15  Thomas Heller  <theller@python.net>
 
 	* Bump version number to 0.6.3dev: development version.
